--- a/src/@orb.yml
+++ b/src/@orb.yml
@@ -1,15 +1,10 @@
 version: 2.1
 
-description: >
-  Sample orb description
-# What will your orb allow users to accomplish?
-# Descriptions should be short, simple, and informative.
+description: |
+  Anchore Engine is a docker container static analysis and policy-based compliance tool that
+  automates the inspection, analysis, and evaluation of images to allow high confidence in
+  container deployments by ensuring workload content meets the required criteria.
 
-# This information will be displayed in the orb registry and is not mandatory.
 display:
-  home_url: "https://www.website.com/docs"
-  source_url: "https://www.github.com/EXAMPLE_ORG/EXAMPLE_PROJECT"
-
-# If your orb requires other orbs, you can import them like this. Otherwise remove the "orbs" stanza.
-# orbs:
-#  hello: circleci/hello-build@0.0.5
+  source_url: https://github.com/anchore/circleci-orbs/blob/master/anchore-engine/src
+  home_url: https://github.com/anchore/grype
